event-planner/src/App.css
@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');

body{
font-family: 'Poppins', sans-serif;
}

.App {
  text-align: center;
}

.navbar {
  text-align: center;
  width: 100%;
  background: slateblue;
  font-size: 20px;
  display: flex;
}

.nav-group {
  color: slateblue;
  display: flex;
  justify-content: space-between;
}

.nav-brand {
  margin-top: 1.2%;
  margin-left: 5%;
}

.nav-brand {
  text-decoration: none;
  color: black;
}

.nav-items {
  display: flex;
  margin-right: 2%;
  width: 30%;
}

.nav-item {
  margin-right: 5%;
}

.NavbarBrand {
  text-decoration: none;
}

li a {
  text-decoration: none;
  color: black;
}

li a:hover{
  text-decoration: none;
  color: slateblue;
  background: white;
   transition: ease 0.6s;
   border-radius: 5px;
   
}

.footer {
  position: absolute;
  bottom: 0px;
  display: flex;
  justify-content: space-around;
  align-content: center;
  align-items: center;
  background-color: slateblue;
  color: black;

  font-size: 20px;
  width: 100%;
  margin-top: 5%;
}

.copyright {
  padding-top: 0.4%;
  margin-right: 4%;
}

.social-div {
  width: 50%;
  margin-left: 10%;
}

.fb {
  margin-left: 10%;
}
.sign-up a {
  text-decoration: none;
  color: #000;
}

.ig {
  margin-left: 10%;
}

.event-page {
  display: flex;
  justify-content: space-evenly;
}

.info-block {
  margin-top: 5%;
  font-weight: bold;
}

.update-block {
  margin-top: 5%;
  width: 15%;
  margin-left: 20%;
}

.edit-btn {
  margin-left: 10%;
  border: 1px solid black;
  padding: 3% 7% 3% 7%;
  background-color: slateblue;
  border-radius: 5px;
   text-decoration: none;
   color: black;
    font-weight: bold;
}

.edit-btn:hover{
  background: white;
  color: slateblue;
  border: 1px solid slateblue;
   transition: ease 0.6s;
}

.delete-btn {
  margin-left: 10%;
  border: 1px solid black;
  padding: 3% 7% 3% 7%;
  background-color: slateblue;
  border-radius: 5px;
  text-decoration: none;
  color: black;
   font-weight: bold;
}


.delete-btn:hover{
  background: white;
  color: slateblue;
  border: 1px solid slateblue;
  transition: ease 0.6s;
}

.main-section {
  background-color: rgba(106, 90, 205, 0.6);
  width: 1360px;
  height: 1200px;
  margin-left: 5%;
  border: 1px solid black;
  border-radius: 2px;
}

.event-title {
  margin-left: 22%;
  margin-top: 2%;
}



.event-card{
  border: 2px solid slateblue;
  color: black;
  width: 25%;
  box-shadow: 5px 10px 8px 5px #888888;
}

.event-btn{
  background: slateblue;
  color: white;
  padding: 2% 5%;
  border: black;
}

.follow-us{
  margin-left: 4%;
}


/*******Log-in Page Styles******/

.login-page{

  border: 4px solid slateblue;
  width: 50%;
  margin: 5% auto;
  height: 400px;
  box-shadow: 5px 10px 8px 5px slateblue;
  border-radius: 5px;
}


.login-header{
  margin-bottom: 10%;
  background: slateblue;
  padding: 5%;
}



.password-input{
  margin-right: 4.3%;
}

.login-btn{
background: slateblue;
color: whitesmoke;
padding: 1% 2%;
font-size: 16px;
cursor: pointer;
border-color: black;
border-radius: 5px;
margin-left: 5%;
}

/*******Sign-up Page Styles******/

.signup-page{

  border: 4px solid slateblue;
  width: 50%;
  margin: 3% auto;
  height: 460px;
  box-shadow: 5px 10px 8px 5px slateblue;
 border-radius: 5px;

}

.signup-form{
  margin-top: 2%;
}

.signup-btn{
  margin-top: 2%;
  background: slateblue;
  color: whitesmoke;
  font-size: 16px;
  padding: 1% 1%;
  cursor: pointer;
  border-color: black;
  border-radius: 5px;
}

span{
  border-bottom: 2px solid slateblue;

}


/*******Event Home Page Styles*******/


.event-home{
 border: 3px solid black;
  color: black;
  width: 30%;
  box-shadow: 5px 10px 8px 5px #888888;
margin: auto;
height: 400px;
background: slateblue;
border-radius: 5px;
}

.event-name-field{
margin-top: 10%;
margin-right: 10%;
}

.event-description-field{
margin-right: 19%;
}

.event-start-field{
margin-right: 8%;
}


.event-end-field{
margin-right: 6%;
}

.event-location-field{
margin-right: 5%;
}

.event-budget-field{

margin-right: 3%;
}

.add-btn{
  background: whitesmoke;
color: slateblue;
padding: 1% 2%;
font-size: 16px;
cursor: pointer;
border-color: black;
font-weight: bold;
margin-top: 4%;
border-radius: 5px;
margin-left: 10%;
}

.add-btn:hover{
background: slateblue;
color: whitesmoke;
transition: ease 0.5s;
}



/********ToDos Styles**********/

.todo-styles {
  /* background-color: rgba(106, 90, 205, 0.6); */
  background: slateblue;
  width: 90%;
  height: 800px;
  margin-left: 5%;
  border: 1px solid black;
  border-radius: 2px;
}

.todos-header{
background: slateblue;
color: white;
width: 25%;
padding: 2%;
}

.todo-list {
    background-color: white;
    margin: auto;
    margin-top: 5%;
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 1px solid #efefef;
    box-shadow:
    /* The top layer shadow */
        0 1px 1px rgba(0,0,0,0.15),
            /* The second layer */
        0 10px 0 -5px #eee,
            /* The second layer shadow */
        0 10px 1px -4px rgba(0,0,0,0.15),
            /* The third layer */
        0 20px 0 -10px #eee,
            /* The third layer shadow */
        0 20px 1px -9px rgba(0,0,0,0.15);
    padding: 30px;
}

.todo-item {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 30px 20px 0;
    width: 70%;
    border-bottom: 1px solid slateblue;
    font-family: Roboto, sans-serif;
    font-weight: 100;
    font-size: 15px;
    color: #333333;
}

input[type=checkbox] {
    margin-right: 10px;
    font-size: 30px;
}

input[type=checkbox]:focus {
    outline: 0;
}

